--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header__inner">
           <div class="header__logo">MoGo</div>
           <nav class="nav">
-            <a class="nav__link" href="#">About</a>
+            <a class="nav__link active" href="#">About</a>
             <a class="nav__link" href="#">Service</a>
             <a class="nav__link" href="#">Blog</a>
             <a class="nav__link" href="#">Work</a>
@@ -30,7 +30,32 @@
     </header>
 
     <div class="intro">
-      <div class="container"></div>
+      <div class="container">
+        <div class="intro__inner">
+          <h2 class="intro__suptitle">Creative Template</h2>
+          <h1 class="intro__title">Welcome to MoGo</h1>
+          <a href="#" class="intro__btn">Learn More</a>
+        </div>
+      </div>
+
+      <div class="intro__slider">
+        <div class="container">
+          <div class="slider__inner">
+            <div class="slider__item active">
+              <span class="slider__number">01 </span>Intro
+            </div>
+            <div class="slider__item">
+              <span class="slider__number">02 </span>Work
+            </div>
+            <div class="slider__item">
+              <span class="slider__number">03 </span>About
+            </div>
+            <div class="slider__item">
+              <span class="slider__number">04 </span>Contacts
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
