--- a/index.html
+++ b/index.html
@@ -1,124 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <title>MoGo</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__inner">
-          <div class="header__logo">MoGo</div>
-          <nav class="nav">
-            <a class="nav__link active" href="#">About</a>
-            <a class="nav__link" href="#">Service</a>
-            <a class="nav__link" href="#">Blog</a>
-            <a class="nav__link" href="#">Work</a>
-            <a class="nav__link" href="#">Contact</a>
-          </nav>
-        </div>
-      </div>
-    </header>
 
-    <div class="intro">
-      <div class="container">
-        <div class="intro__inner">
-          <h2 class="intro__suptitle">Creative Template</h2>
-          <h1 class="intro__title">Welcome to MoGo</h1>
-          <a href="#" class="intro__btn">Learn More</a>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet" />
+  <title>MoGo</title>
+</head>
 
-      <div class="intro__slider">
-        <div class="container">
-          <div class="slider__inner">
-            <div class="slider__item active">
-              <span class="slider__number">01 </span>Intro
-            </div>
-            <div class="slider__item">
-              <span class="slider__number">02 </span>Work
-            </div>
-            <div class="slider__item">
-              <span class="slider__number">03 </span>About
-            </div>
-            <div class="slider__item">
-              <span class="slider__number">04 </span>Contacts
-            </div>
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <div class="header__logo">MoGo</div>
+        <nav class="nav">
+          <a class="nav__link active" href="#">About</a>
+          <a class="nav__link" href="#">Service</a>
+          <a class="nav__link" href="#">Blog</a>
+          <a class="nav__link" href="#">Work</a>
+          <a class="nav__link" href="#">Contact</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <div class="intro">
+    <div class="container">
+      <div class="intro__inner">
+        <h2 class="intro__suptitle">Creative Template</h2>
+        <h1 class="intro__title">Welcome to MoGo</h1>
+        <a href="#" class="intro__btn">Learn More</a>
+      </div>
+    </div>
+
+    <div class="intro__slider">
+      <div class="container">
+        <div class="slider__inner">
+          <div class="slider__item active">
+            <span class="slider__number">01 </span>Intro
+          </div>
+          <div class="slider__item">
+            <span class="slider__number">02 </span>Work
+          </div>
+          <div class="slider__item">
+            <span class="slider__number">03 </span>About
+          </div>
+          <div class="slider__item">
+            <span class="slider__number">04 </span>Contacts
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <section class="section">
-      <div class="container">
-        <div class="section__header">
-          <h3 class="section__suptitle">What we do</h3>
-          <h2 class="section__title">Story about us</h2>
-          <div class="section__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </div>
-        </div>
-
-        <div class="about">
-          <div class="about__item">
-            <div class="about__img">
-              <img src="./assets/images/about/1.jpg" alt="photo1" />
-            </div>
-            <div class="about__text">super team</div>
-          </div>
-          <div class="about__item">
-            <div class="about__img">
-              <img src="./assets/images/about/2.jpg" alt="photo2" />
-            </div>
-            <div class="about__text">super team</div>
-          </div>
-          <div class="about__item">
-            <div class="about__img">
-              <img src="./assets/images/about/3.jpg" alt="photo3" />
-            </div>
-            <div class="about__text">super team</div>
-          </div>
+  <section class="section">
+    <div class="container">
+      <div class="section__header">
+        <h3 class="section__suptitle">What we do</h3>
+        <h2 class="section__title">Story about us</h2>
+        <div class="section__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
         </div>
       </div>
-    </section>
 
-    <div class="statistics">
-      <div class="container">
-        <div class="stat">
-          <div class="stat__item">
-            <div class="stat__count">42</div>
-            <div class="stat__text">Web Design Projects</div>
+      <div class="about">
+        <div class="about__item">
+          <div class="about__img">
+            <img src="./assets/images/about/1.jpg" alt="photo1" />
           </div>
-          <div class="stat__item">
-            <div class="stat__count">123</div>
-            <div class="stat__text">happy client</div>
+          <div class="about__text">super team</div>
+        </div>
+        <div class="about__item">
+          <div class="about__img">
+            <img src="./assets/images/about/2.jpg" alt="photo2" />
           </div>
-          <div class="stat__item">
-            <div class="stat__count">15</div>
-            <div class="stat__text">award winner</div>
+          <div class="about__text">super team</div>
+        </div>
+        <div class="about__item">
+          <div class="about__img">
+            <img src="./assets/images/about/3.jpg" alt="photo3" />
           </div>
-          <div class="stat__item">
-            <div class="stat__count">99</div>
-            <div class="stat__text">cup of coffee</div>
-          </div>
-          <div class="stat__item">
-            <div class="stat__count">24</div>
-            <div class="stat__text">members</div>
-          </div>
+          <div class="about__text">super team</div>
         </div>
       </div>
     </div>
-  </body>
+  </section>
+
+  <div class="statistics">
+    <div class="container">
+      <div class="stat">
+        <div class="stat__item">
+          <div class="stat__count">42</div>
+          <div class="stat__text">Web Design Projects</div>
+        </div>
+        <div class="stat__item">
+          <div class="stat__count">123</div>
+          <div class="stat__text">happy client</div>
+        </div>
+        <div class="stat__item">
+          <div class="stat__count">15</div>
+          <div class="stat__text">award winner</div>
+        </div>
+        <div class="stat__item">
+          <div class="stat__count">99</div>
+          <div class="stat__text">cup of coffee</div>
+        </div>
+        <div class="stat__item">
+          <div class="stat__count">24</div>
+          <div class="stat__text">members</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section class="section">
+    <div class="container">
+      <div class="section__header">
+        <h3 class="section__suptitle">We work with</h3>
+        <h2 class="section__title">Amazing Services</h2>
+      </div>
+      <div class="services">
+        <div class="services__item">
+          <img class="services__icon" src="./assets/images/services/photography.png"></img>
+          <div class="services__title">
+            Photography
+          </div>
+          <div class="services__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </div>
+        </div>
+        <div class="services__item">
+          <img class="services__icon" src="./assets/images/services/webdesign.png"></img>
+          <div class="services__title">
+            Web Design
+          </div>
+          <div class="services__text">
+            Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </div>
+        </div>
+        <div class="services__item">
+          <img class="services__icon" src="./assets/images/services/creativity.png"></img>
+          <div class="services__title">
+            Creativity
+          </div>
+          <div class="services__text">
+            Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </div>
+        </div>
+
+      </div>
+
+      <hr class="hr">
+
+      <div class="services">
+        <div class="services__item">
+          <img class="services__icon" src="./assets/images/services/seo.png"></img>
+          <div class="services__title">
+            seo
+          </div>
+          <div class="services__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </div>
+        </div>
+        <div class="services__item">
+          <img class="services__icon" src="./assets/images/services/css-html.png"></img>
+          <div class="services__title">
+            css/html
+          </div>
+          <div class="services__text">
+            Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </div>
+        </div>
+        <div class="services__item">
+          <img class="services__icon" src="./assets/images/services/digital.png"></img>
+          <div class="services__title">
+            Digital
+          </div>
+          <div class="services__text">
+            Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="section  section--devices">
+    <div class="container">
+      <div class="section__header">
+        <h3 class="section__suptitle">For all devices</h3>
+        <h2 class="section__title">Unique design</h2>
+      </div>
+      <div class="devices">
+        <img src="./assets/images/ipad.png" alt="ipad" class="devices__item">
+        <img src="./assets/images/iphone.png" alt="iphone" class="devices__item devices__item--iphone">
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
