--- a/index.html
+++ b/index.html
@@ -204,6 +204,107 @@
       </div>
     </div>
   </section>
+
+  <section class="section">
+    <div class="container">
+
+      <div class="section__header">
+        <h3 class="section__suptitle">Service</h3>
+        <h2 class="section__title">Who we are</h2>
+        <div class="section__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.
+        </div>
+      </div>
+
+
+      <div class="wedo">
+        <div class="wedo__item">
+          <img src="" alt="photo">
+        </div>
+        <div class="wedo__item">
+          <div class="accordion">
+            <div class="accordion__item">
+              <div class="accordion__header">
+                <img class="accordion__icon" src="./assets/images/services/photography.png" alt="">
+                <div class="accordion__title">Photography</div>
+              </div>
+              <div class="accordion__content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                  eu
+                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                  deserunt mollit anim id est laborum.
+                </p>
+              </div>
+            </div>
+
+            <div class="accordion__item active">
+              <div class="accordion__header">
+                <img class="accordion__icon" src="./assets/images/services/creativity.png" alt="">
+                <div class="accordion__title">Creativity</div>
+              </div>
+              <div class="accordion__content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                  eu
+                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                  deserunt mollit anim id est laborum.
+                </p>
+              </div>
+            </div>
+
+            <div class="accordion__item ">
+              <div class="accordion__header">
+                <img class="accordion__icon" src="./assets/images/services/webdesign.png" alt="">
+                <div class="accordion__title">Web Design</div>
+              </div>
+              <div class="accordion__content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip
+                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                  eu
+                  fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                  deserunt mollit anim id est laborum.
+                </p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div> <!-- wedo -->
+
+
+    </div>
+  </section>
+
+  <div class="section section--gray">
+    <div class="container">
+
+      <div class="reviews">
+        <a href="#" class="reviews__btn reviews__btn--prev">Prev</a>
+        <a href="#" class="reviews__btn reviews__btn--next">Next</a>
+        <div class="reviews__item">
+          <img class="reviews__photo" src="" alt="photo">
+          <div class="reviews__text">
+            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+          </div>
+          <div class="reviews__author"> Jon Doe</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
