--- a/index.html
+++ b/index.html
@@ -73,22 +73,28 @@
 
       <div class="about">
         <div class="about__item">
-          <div class="about__img">
-            <img src="./assets/images/about/1.jpg" alt="photo1" />
+          <div class="about__inner">
+            <div class="about__img">
+              <img src="./assets/images/about/1.jpg" alt="photo1" />
+            </div>
+            <div class="about__text">super team</div>
           </div>
-          <div class="about__text">super team</div>
         </div>
         <div class="about__item">
-          <div class="about__img">
-            <img src="./assets/images/about/2.jpg" alt="photo2" />
+          <div class="about__inner">
+            <div class="about__img">
+              <img src="./assets/images/about/2.jpg" alt="photo2" />
+            </div>
+            <div class="about__text">super team</div>
           </div>
-          <div class="about__text">super team</div>
         </div>
         <div class="about__item">
-          <div class="about__img">
-            <img src="./assets/images/about/3.jpg" alt="photo3" />
+          <div class="about__inner">
+            <div class="about__img">
+              <img src="./assets/images/about/3.jpg" alt="photo3" />
+            </div>
+            <div class="about__text">super team</div>
           </div>
-          <div class="about__text">super team</div>
         </div>
       </div>
     </div>
@@ -221,7 +227,7 @@
 
       <div class="wedo">
         <div class="wedo__item">
-          <img src="" alt="photo">
+          <img src="./assets/images/wedo.jpg" alt="photo">
         </div>
         <div class="wedo__item">
           <div class="accordion">
@@ -294,7 +300,7 @@
         <a href="#" class="reviews__btn reviews__btn--prev">Prev</a>
         <a href="#" class="reviews__btn reviews__btn--next">Next</a>
         <div class="reviews__item">
-          <img class="reviews__photo" src="" alt="photo">
+          <img class="reviews__photo" src="./assets/images/" alt="photo">
           <div class="reviews__text">
             “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
@@ -305,6 +311,146 @@
     </div>
   </div>
 
+  <section class="section">
+    <div class="container">
+      <div class="section__header">
+        <h3 class="section__suptitle">Who we are</h3>
+        <h2 class="section__title">Meet our team</h2>
+        <div class="section__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.
+        </div>
+      </div>
+    </div>
+
+    <div class="about">
+      <div class="about__item">
+        <div class="about__inner">
+          <div class="about__img">
+            <img src="./assets/images/team/1.jpg" alt="photo1" />
+          </div>
+          <div class="about__text">
+            <div class="social">
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-pinterest"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="about__info">
+          <div class="about__name">
+            Matthew Dix
+          </div>
+          <div class="about__prof">
+            Graphic Design
+          </div>
+        </div>
+
+      </div>
+      <div class="about__item">
+        <div class="about__inner">
+          <div class="about__img">
+            <img src="./assets/images/team/2.jpg" alt="photo2" />
+          </div>
+          <div class="about__text">
+            <div class="social">
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-pinterest"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="about__info">
+          <div class="about__name">
+            Christopher Campbell
+          </div>
+          <div class="about__prof">
+            Branding/UX design
+          </div>
+        </div>
+
+      </div>
+      <div class="about__item">
+        <div class="about__inner">
+          <div class="about__img">
+            <img src="./assets/images/team/3.jpg" alt="photo3" />
+          </div>
+          <div class="about__text">
+            <div class="social">
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-pinterest"></i>
+              </a>
+              <a class="social__item" href="#" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="about__info">
+          <div class="about__name">
+            Michael Fertig
+          </div>
+          <div class="about__prof">
+            Developer
+          </div>
+        </div>
+      </div> <!--  / about -->
+    </div> <!--  / container -->
+
+  </section>
+
+  <div class="section section--gray">
+    <div class="container">
+      <div class="logos">
+        <div class="logos__item">
+          <img src="./assets/images/logos/1.png" alt="logo1">
+        </div>
+        <div class="logos__item">
+          <img src="./assets/images/logos/2.png" alt="logo2">
+        </div>
+        <div class="logos__item">
+          <img src="./assets/images/logos/3.png" alt="logo3">
+        </div>
+        <div class="logos__item">
+          <img src="./assets/images/logos/4.png" alt="logo4">
+        </div>
+        <div class="logos__item">
+          <img src="./assets/images/logos/5.png" alt="logo5">
+        </div>
+        <div class="logos__item">
+          <img src="./assets/images/logos/6.png" alt="logo6">
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <script src="https://kit.fontawesome.com/2f4988adf4.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
