feat:add new block 'blog' and styles for these block

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 
       <div class="clients">
         <div class="clients__item">
-          <img class="clients__photo" src="3" alt="photo">
+          <img class="clients__photo" src="./assets/images/clients/1.png" alt="photo">
           <div class="clients__content">
             <div class="clients__name">Matthew Dix</div>
             <div class="clients__prof">Graphic Design</div>
@@ -573,7 +573,7 @@
           </div>
         </div>
         <div class="clients__item">
-          <img class="clients__photo" src="3" alt="photo">
+          <img class="clients__photo" src="./assets/images/clients/2.png" alt="photo">
           <div class="clients__content">
             <div class="clients__name">Jaelynn Castillo </div>
             <div class="clients__prof">Graphic Design</div>
@@ -582,7 +582,7 @@
           </div>
         </div>
         <div class="clients__item">
-          <img class="clients__photo" src="3" alt="photo">
+          <img class="clients__photo" src="./assets/images/clients/3.png" alt="photo">
           <div class="clients__content">
             <div class="clients__name">Nick Karvounis</div>
             <div class="clients__prof">Graphic Design</div>
@@ -591,7 +591,7 @@
           </div>
         </div>
         <div class="clients__item">
-          <img class="clients__photo" src="3" alt="photo">
+          <img class="clients__photo" src="./assets/images/clients/4.png" alt="photo">
           <div class="clients__content">
             <div class="clients__name">Mike Petrucci</div>
             <div class="clients__prof">Graphic Design</div>
@@ -600,6 +600,111 @@
           </div>
         </div>
       </div>
+
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+      <div class="section__header">
+        <h3 class="section__suptitle">Our stories</h3>
+        <h2 class="section__title">Latest blog</h2>
+      </div>
+    </div>
+    <div class="blog">
+      <div class="blog__item">
+        <div class="blog__header">
+          <a href="#">
+            <img class="blog__photo" src="./assets/images/blog/1.jpg" alt="">
+          </a>
+          <div class="blog__date">
+            <div class="blog__date-day">15</div>Jan
+          </div>
+        </div>
+
+        <div class="blog__content">
+          <div class="blog__title">
+            <a href="#">Lorem ipsum dolor sit amet</a>
+          </div>
+          <div class="blog__text">
+            Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </div>
+        </div>
+
+        <div class="blog__footer">
+          <div class="blog-stat">
+            <span class="blog-stat__item">
+              <i class="fa-solid fa-eye"></i> 517
+            </span>
+            <span class="blog-stat__item">
+              <i class="fa-solid fa-comment-dots"></i> 17
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="blog__item">
+        <div class="blog__header">
+          <a href="#">
+            <img class="blog__photo" src="./assets/images/blog/2.jpg" alt="">
+          </a>
+          <div class="blog__date">
+            <div class="blog__date-day">15</div>Jan
+          </div>
+        </div>
+
+        <div class="blog__content">
+          <div class="blog__title">
+            <a href="#">Lorem ipsum dolor sit amet</a>
+          </div>
+          <div class="blog__text">
+            Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </div>
+        </div>
+
+        <div class="blog__footer">
+          <div class="blog-stat">
+            <span class="blog-stat__item">
+              <i class="fa-solid fa-eye"></i> 517
+            </span>
+            <span class="blog-stat__item">
+              <i class="fa-solid fa-comment-dots"></i> 17
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="blog__item">
+        <div class="blog__header">
+          <a href="#">
+            <img class="blog__photo" src="./assets/images/blog/3.jpg" alt="">
+          </a>
+          <div class="blog__date">
+            <div class="blog__date-day">15</div>Jan
+          </div>
+        </div>
+
+        <div class="blog__content">
+          <div class="blog__title">
+            <a href="#">Lorem ipsum dolor sit amet</a>
+          </div>
+          <div class="blog__text">
+            Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </div>
+        </div>
+
+        <div class="blog__footer">
+          <div class="blog-stat">
+            <span class="blog-stat__item">
+              <i class="fa-solid fa-eye"></i> 517
+            </span>
+            <span class="blog-stat__item">
+              <i class="fa-solid fa-comment-dots"></i> 17
+            </span>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </section>
