--- a/index.html
+++ b/index.html
@@ -705,7 +705,17 @@
         </div>
       </div>
 
+    </div>
+  </section>
 
+  <section class="section section--map">
+    <div class="container">
+      <div class="map">
+        <h2 class="map__title">
+          <div><i class="fa-solid fa-location-dot"></i></div>
+          <a href="https://goo.gl/maps/jap9cGNN4TmWCfERA">Open Map</a>
+        </h2>
+      </div>
     </div>
   </section>
 
