feat:the end finished a mile of the remaining blocks and their styling.Refactor:add new images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <a class="nav__link" href="#">Blog</a>
           <a class="nav__link" href="#">Work</a>
           <a class="nav__link" href="#">Contact</a>
+          <a class="nav__link" href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <a class="nav__link" href="#">
+            <i class="fas fa-search"></i>
+          </a>
         </nav>
       </div>
     </div>
@@ -708,6 +714,20 @@
     </div>
   </section>
 
+
+  <div class="section">
+
+    <div class="container">
+      <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+    </div>
+    <div class="container">
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+
+
+
   <section class="section section--map">
     <div class="container">
       <div class="map">
@@ -718,6 +738,112 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+
+      <div class="footer__inner">
+        <div class="footer__col footer__col--first">
+          <div class="footer__logo">MoGo</div>
+          <div class="footer__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo est deleniti voluptatem maiores. Veniam qui,
+            ex mollitia velit modi, totam alias doloribus temporibus aspernatur quo dolores, eveniet sint consequatur
+            ipsa.
+          </div>
+          <div class="footer__social">
+            <div class="footer__social-header">
+              <b>15k</b> followers
+            </div>
+            <div class="footer__social-content">
+              Follow Us:
+              <a href="" target="_blank">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+          <form action="/" class="subscribe" method="post">
+            <input class="subscribe__input" type="email" name="name" placeholder="your Email...">
+            <button class="subscribe__btn" type="submit">Subscribe</button>
+          </form>
+        </div>
+
+        <div class="footer__col footer__col--second">
+          <div class="footer__title">Blogs</div>
+
+          <div class="blogs">
+            <div class="blogs__item">
+              <img class="blogs__img" src="assets/images/blog/1.jpg" alt="">
+              <div class="blogs__content">
+                <a class="blogs__title" href="#">Lorem, ipsum dolor sit amet consectetur.</a>
+                <div class="blogs__date">Jan 9,2016</div>
+              </div>
+            </div>
+            <div class="blogs__item">
+              <img class="blogs__img" src="assets/images/blog/2.jpg" alt="">
+              <div class="blogs__content">
+                <a class="blogs__title" href="#">Lorem, ipsum dolor.</a>
+                <div class="blogs__date">Jan 9,2016</div>
+              </div>
+            </div>
+            <div class="blogs__item">
+              <img class="blogs__img" src="assets/images/blog/3.jpg" alt="">
+              <div class="blogs__content">
+                <a class="blogs__title" href="#">Lorem, ipsum dolor sit amet consectetur.</a>
+                <div class="blogs__date">Jan 9,2016</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__col footer__col--third">
+          <div class="footer__title">Instagram</div>
+
+          <div class="instagram">
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/1.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/2.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/3.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/4.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/5.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/6.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/7.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/8.jpg" alt="">
+            </a>
+            <a class="instagram__item" href="#">
+              <img src="/assets/images/instagram/9.jpg" alt="">
+            </a>
+
+
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        2016 MoGo free PSD template by <span>Laaqiq</span>
+      </div>
+
+    </div>
+  </footer>
 
   <script src="https://kit.fontawesome.com/2f4988adf4.js" crossorigin="anonymous"></script>
 </body>
