--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -48,16 +49,20 @@
       <div class="container">
         <div class="slider__inner">
           <div class="slider__item active">
-            <span class="slider__number">01 </span>Intro
+            <span class="slider__number">01 </span>
+            <span class="slider__text">Intro</span>
           </div>
           <div class="slider__item">
-            <span class="slider__number">02 </span>Work
+            <span class="slider__number">02 </span>
+            <span class="slider__text"> Work </span>
           </div>
           <div class="slider__item">
-            <span class="slider__number">03 </span>About
+            <span class="slider__number">03 </span>
+            <span class="slider__text">About</span>
           </div>
           <div class="slider__item">
-            <span class="slider__number">04 </span>Contacts
+            <span class="slider__number">04 </span>
+            <span class="slider__text">Contacts</span>
           </div>
         </div>
       </div>
@@ -139,7 +144,7 @@
         <h2 class="section__title">Amazing Services</h2>
       </div>
       <div class="services">
-        <div class="services__item">
+        <div class="services__item services__item--border">
           <img class="services__icon" src="./assets/images/services/photography.png"></img>
           <div class="services__title">
             Photography
@@ -148,7 +153,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </div>
         </div>
-        <div class="services__item">
+        <div class="services__item services__item--border">
           <img class="services__icon" src="./assets/images/services/webdesign.png"></img>
           <div class="services__title">
             Web Design
@@ -157,7 +162,7 @@
             Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
           </div>
         </div>
-        <div class="services__item">
+        <div class="services__item services__item--border">
           <img class="services__icon" src="./assets/images/services/creativity.png"></img>
           <div class="services__title">
             Creativity
@@ -167,11 +172,6 @@
           </div>
         </div>
 
-      </div>
-
-      <hr class="hr">
-
-      <div class="services">
         <div class="services__item">
           <img class="services__icon" src="./assets/images/services/seo.png"></img>
           <div class="services__title">
@@ -201,6 +201,9 @@
         </div>
 
       </div>
+
+
+
     </div>
   </section>
 
@@ -233,7 +236,7 @@
 
       <div class="wedo">
         <div class="wedo__item">
-          <img src="./assets/images/wedo.jpg" alt="photo">
+          <img class="wedo__img" src="./assets/images/wedo.jpg" alt="photo">
         </div>
         <div class="wedo__item">
           <div class="accordion">
