refactor:vertical adaptiv header,part3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header ">
     <div class="container">
       <div class="header__inner">
         <div class="header__logo">MoGo</div>
@@ -32,6 +32,9 @@
             <i class="fas fa-search"></i>
           </a>
         </nav>
+        <button class="nav-toggle" type="button">
+          <span class="nav-toggle__item"></span>
+        </button>
       </div>
     </div>
   </header>
